WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111706
[WK2][EFL] Fix EwkContext class API
https://bugs.webkit.org/show_bug.cgi?id=111706
Summary
[WK2][EFL] Fix EwkContext class API
Mikhail Pozdnyakov
Reported
2013-03-07 03:30:29 PST
EwkContext class has couple of problems to be fixed: 1) EwkContext::create() should be called getOrCreate actually, as it returns the same instance of EwkContext for the given WKContextRef if present. 2) EwkContext::defaultContext() should return raw pointer rather than PassRefPtr<EwkContext> as ownership is not transferred there.
Attachments
patch
(5.53 KB, patch)
2013-03-07 04:02 PST
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
patch v2
(5.60 KB, patch)
2013-03-07 05:07 PST
,
Mikhail Pozdnyakov
ap
: review+
Details
Formatted Diff
Diff
to be landed
(5.52 KB, patch)
2013-03-12 05:05 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2013-03-07 04:02:57 PST
Created
attachment 191964
[details]
patch
Kenneth Rohde Christiansen
Comment 2
2013-03-07 04:04:37 PST
Comment on
attachment 191964
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191964&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_context.cpp:105 > +PassRefPtr<EwkContext> EwkContext::getOrCreate(WKContextRef context)
I really dislike the name! Ain't there examples of similar things in WebCore
Mikhail Pozdnyakov
Comment 3
2013-03-07 05:07:11 PST
Created
attachment 191974
[details]
patch v2 renamed getOrCreate(). Default context is created after main() entrance :)
Kenneth Rohde Christiansen
Comment 4
2013-03-08 03:32:27 PST
Comment on
attachment 191974
[details]
patch v2 LGTM
Alexey Proskuryakov
Comment 5
2013-03-11 10:59:15 PDT
Comment on
attachment 191974
[details]
patch v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=191974&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_context.cpp:132 > + static EwkContext* defaultInstance = 0; > + if (!defaultInstance) > + defaultInstance = create().leakRef();
A better way to write this would be: static EwkContext* defaultInstance = create().leakRef();
Mikhail Pozdnyakov
Comment 6
2013-03-12 05:05:18 PDT
Created
attachment 192713
[details]
to be landed
WebKit Review Bot
Comment 7
2013-03-12 05:34:50 PDT
Comment on
attachment 192713
[details]
to be landed Clearing flags on attachment: 192713 Committed
r145535
: <
http://trac.webkit.org/changeset/145535
>
WebKit Review Bot
Comment 8
2013-03-12 05:34:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug