Source/WebKit2/UIProcess/efl/WebInspectorProxyEfl.cpp
@@ -100,7 +100,7 @@ WebPageProxy* WebInspectorProxy::platformCreateInspectorPage()
 
     // FIXME: Refactor to use WKViewRef.
     WKContextRef contextRef = toAPI(page()->process()->context());
-    m_inspectorView = EwkView::createEvasObject(ecore_evas_get(m_inspectorWindow), EwkContext::create(contextRef), toAPI(inspectorPageGroup()), EwkView::LegacyBehavior);
+    m_inspectorView = EwkView::createEvasObject(ecore_evas_get(m_inspectorWindow), EwkContext::findOrCreateWrapper(contextRef), toAPI(inspectorPageGroup()), EwkView::LegacyBehavior);
     if (!m_inspectorView)
         return 0;
 
